💄 Trying to fix scrollbar issue on window

--- a/style/Default.css
+++ b/style/Default.css
@@ -6,6 +6,10 @@ html {
 	background: #F2F2F2;
 }
 
+html {
+	margin-left: calc(100vw - 100%);
+}
+
 #__next {
 	width: 100%;
 	height: 100%
